src/eclipseworkspace/Sample/src/csd/App.java
/*----------------------------------------------------------------------------------------------------------------------
	double türünden float türüne doğrudan atama geçersizdir
-----------------------------------------------------------------------------------------------------------------------*/
package csd;

class App {
	public static void main(String [] args)
	{
		double a = 12;
		float b;
		
		b = a; //error 
	
	}
}
